@@ -37,6 +37,16 @@ import jdk.test.lib.JDKToolFinder;
  */
 
 /*
+ * @test id=test-64bit-compact-object-headers
+ * @summary Test the VM.metaspace command
+ * @requires vm.bits == "64"
+ * @library /test/lib
+ * @modules java.base/jdk.internal.misc
+ *          java.management
+ * @run main/othervm -Dwith-compressed-class-space -XX:+UnlockDiagnosticVMOptions -XX:+UseCompactObjectHeaders -XX:MaxMetaspaceSize=201M -Xmx100M -XX:+UseCompressedOops -XX:+UseCompressedClassPointers PrintMetaspaceDcmd
+ */
+
+/*
  * @test id=test-64bit-ccs-guarded
  * @summary Test the VM.metaspace command
  * @requires vm.bits == "64"
